--- a/popup.html
+++ b/popup.html
@@ -3,10 +3,13 @@
     <title>Extension Action</title>
     <link type="text/css" href="css/custom-theme/jquery-ui-1.10.3.custom.css" rel="stylesheet"/>
     <style type="text/css">
+        /* System Fonts as used by GitHub */
         body {
-            font: 80% "Trebuchet MS", sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+        }  
+        body {
+            font-size: 80%;
             margin: 10px;
-            background: #f5f5f5;
             width: 300px;
             height: auto;
             overflow: auto;
@@ -19,7 +22,6 @@
         }
 
         div.urlTitle {
-            font-family: 'Arial', arial, serif;
             font-size: 16px;
             font-style: normal;
             color: #000;
@@ -31,7 +33,6 @@
         }
 
         a.infoUrl {
-            font-family: 'Arial', arial, serif;
             font-size: 12px;
             font-style: normal;
             text-align: center;
@@ -43,7 +44,6 @@
         }
 
         a.ratedUrl {
-            font-family: 'Arial', arial, serif;
             font-size: 12px;
             font-style: normal;
             text-align: center;
@@ -56,17 +56,13 @@
 
         div.urlActionForm {
             text-align: center;
-
-            font-family: 'Arial', arial, serif;
             font-size: 14px;
             color: #000;
             text-decoration: none;
-
             width: 300px;
             padding: 0px 0px 0px 0px;
             margin: 0px 0px 0px 0px;
             border: 1px solid #DDD;
-
             white-space: wrap;
             overflow: auto;
             text-overflow: auto;
@@ -92,7 +88,6 @@
         }
 
         #bottomLinks {
-            font-family: 'Arial', arial, serif;
             font-size: 12px;
             color: #000;
             text-decoration: none;
@@ -110,7 +105,6 @@
         }
 
         #cbMultiSelect {
-            font-family: 'Arial', arial, serif;
             font-size: 14px;
             color: #000;
         }
@@ -120,7 +114,6 @@
             height: auto;
             margin: 0px auto;
             padding: 0px 5px 0px 5px;
-            background: #f5f5f5;
             display: none;
             text-align: center;
         }
@@ -130,7 +123,6 @@
             height: auto;
             margin: 0px auto;
             padding: 3px 5px 5px 5px;
-            background: #f5f5f5;
             display: none;
             text-align: center;
         }
@@ -182,6 +174,8 @@
             outline-color: transparent;
         }
     </style>
+
+    <link rel="stylesheet" href="css/custom.css"/>
 
     <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="js/jquery-ui-1.10.3.custom.min.js"></script>
